# CMakeFeatureToggles

./: FeatureToggles.cmake  LICENSE.md  README.md
example/: CMakeLists.txt  Makefile  foo.c  foo_config.h
